--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@nestjs/passport": "^8.2.1",
     "echarts": "^5.3.1",
     "mathjax-angular": "^1.4.2",
     "mathjs": "^10.5.3",
     "ngx-echarts": "^8.0.1",
+    "passport": "^0.5.3",
+    "passport-local": "^1.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
