--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build — output-path=dist — source-map=false",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -18,16 +18,25 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "@nestjs/passport": "^8.2.1",
     "@nrwl/angular": "^14.1.9",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "echarts": "^5.3.1",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mathjax-angular": "^1.4.2",
     "mathjs": "^10.5.3",
+    "mongoose": "^6.3.4",
     "ngx-echarts": "^8.0.1",
     "passport": "^0.5.3",
     "passport-local": "^1.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "validator": "^13.7.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -43,6 +52,8 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "ng-packagr": "^13.0.0",
+    "nodemon": "^2.0.16",
     "typescript": "~4.5.2"
   }
 }
