--- a/package.json
+++ b/package.json
@@ -1,213 +1,60 @@
 {
-  "swagger": "2.0",
-  "info": {
-      "description": "This is a simple example NodeJS API project to demonstrate Swagger Documentation",
-      "version": "1.0.0",
-      "title": "Tasks API",
-      "contact": {
-          "email": "abc@gmail.com"
-      },
-      "license": {
-          "name": "Apache 2.0",
-          "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-      }
+  "name": "numerical",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build — output-path=dist — source-map=false",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
-  "schemes": ["http"],
-  "host": "localhost:3080",
-  "basePath": "/api",
-  "paths" : {
-      "/todos" : {
-          "get" : {
-              "summary" : "Get all the tasks",
-              "description": "Get all the tasks",
-              "produces": ["application/json"],
-              "parameters": [],
-              "responses": {
-                  "200": {
-                      "description": "successful operation",
-                      "schema": {
-                          "type": "array",
-                          "items": {
-                              "$ref": "#/definitions/todosResponse"
-                          }
-                      }
-                  },
-                  "400": {
-                      "description": "Invalid status value",
-                      "schema": {
-                          "$ref": "#/definitions/InvalidResponse"
-                      }
-                  }
-              }
-          }
-      },
-      "/todo" : {
-          "post" : {
-              "summary" : "Save the task",
-              "description": "Save the task",
-              "produces": ["application/json"],
-              "consumes": ["application/json"],
-              "parameters": [
-                  {
-                      "in": "body",
-                      "name": "body",
-                      "description": "task object",
-                      "required": true,
-                      "schema": {
-                          "type": "object",
-                          "properties": {
-                              "task" : {
-                                  "type": "object",
-                                  "$ref": "#/definitions/Task"
-                              }
-                          }
-                      }
-                  }
-              ],
-              "responses": {
-                  "200": {
-                      "description": "successful operation",
-                      "schema": {
-                          "type": "array",
-                          "items": {
-                              "$ref": "#/definitions/todosResponse"
-                          }
-                      }
-                  },
-                  "400": {
-                      "description": "Invalid status value",
-                      "schema": {
-                          "$ref": "#/definitions/InvalidResponse"
-                      }
-                  }
-              }
-          }
-      },
-      "/todos/{id}" : {
-          "put" : {
-              "summary" : "Update the tasks",
-              "description": "Update the tasks",
-              "produces": ["application/json"],
-              "parameters": [
-                  {
-                      "name": "id",
-                      "in": "path",
-                      "description": "task id that needs to be deleted",
-                      "required": true,
-                      "type": "string"
-                  },
-                  {
-                      "in": "body",
-                      "name": "body",
-                      "description": "task object",
-                      "required": true,
-                      "schema": {
-                          "type": "object",
-                          "properties": {
-                              "task" : {
-                                  "type": "object",
-                                  "$ref": "#/definitions/Task"
-                              }
-                          }
-                      }
-                  }
-              ],
-              "responses": {
-                  "200": {
-                      "description": "successful operation",
-                      "schema": {
-                          "type": "array",
-                          "items": {
-                              "$ref": "#/definitions/todosResponse"
-                          }
-                      }
-                  },
-                  "400": {
-                      "description": "Invalid status value",
-                      "schema": {
-                          "$ref": "#/definitions/InvalidResponse"
-                      }
-                  }
-              }
-          }
-      },
-      "/todo/{id}" : {
-          "delete" : {
-              "summary" : "Delete the task",
-              "description": "Delete the task",
-              "produces": ["application/json"],
-              "parameters": [
-                  {
-                      "name": "id",
-                      "in": "path",
-                      "description": "task id that needs to be deleted",
-                      "required": true,
-                      "type": "string"
-                  }
-              ],
-              "responses": {
-                  "200": {
-                      "description": "successful operation",
-                      "schema": {
-                          "type": "array",
-                          "items": {
-                              "$ref": "#/definitions/todosResponse"
-                          }
-                      }
-                  },
-                  "400": {
-                      "description": "Invalid status value",
-                      "schema": {
-                          "$ref": "#/definitions/InvalidResponse"
-                      }
-                  }
-              }
-          }
-      }
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~13.2.0",
+    "@angular/common": "~13.2.0",
+    "@angular/compiler": "~13.2.0",
+    "@angular/core": "~13.2.0",
+    "@angular/forms": "~13.2.0",
+    "@angular/platform-browser": "~13.2.0",
+    "@angular/platform-browser-dynamic": "~13.2.0",
+    "@angular/router": "~13.2.0",
+    "@auth0/angular-jwt": "^5.0.2",
+    "@nestjs/passport": "^8.2.1",
+    "@nrwl/angular": "^14.1.9",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
+    "echarts": "^5.3.1",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mathjax-angular": "^1.4.2",
+    "mathjs": "^10.5.3",
+    "mongoose": "^6.3.4",
+    "ngx-echarts": "^8.0.1",
+    "passport": "^0.5.3",
+    "passport-local": "^1.0.0",
+    "rxjs": "~7.5.0",
+    "swagger-ui-express": "^4.4.0",
+    "tslib": "^2.3.0",
+    "validator": "^13.7.0",
+    "zone.js": "~0.11.4"
   },
-  "definitions": {
-      "todosResponse": {
-          "type": "object",
-          "properties": {
-              "id": {
-                   "type": "integer"
-              },
-              "task": {
-                  "type": "string"
-              },
-              "assignee": {
-                  "type": "string"
-              },
-              "status": {
-                  "type": "string"
-              }
-          }
-      },
-      "Task": {
-          "type": "object",
-          "properties": {
-              "task": {
-                  "type": "string"
-              },
-              "assignee": {
-                  "type": "string"
-              },
-              "status": {
-                  "type": "string"
-              }
-          }
-      },
-      "InvalidResponse": {
-          "type": "object",
-          "properties": {
-              "statusCode": {
-                  "type": "string"
-              },
-              "message": {
-                  "type": "string"
-              }
-          }
-
-      }
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~13.2.4",
+    "@angular/cli": "~13.2.4",
+    "@angular/compiler-cli": "~13.2.0",
+    "@types/echarts": "^4.9.13",
+    "@types/jasmine": "~3.10.0",
+    "@types/node": "^12.11.1",
+    "jasmine-core": "~4.0.0",
+    "karma": "~6.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.1.0",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "ng-packagr": "^13.0.0",
+    "nodemon": "^2.0.16",
+    "typescript": "~4.5.2"
   }
 }
